# PyNetSchoolApi

./: LICENSE  README.md  pyproject.toml
examples/: first.py
pyNetSchoolApi/: __init__.py  errors.py  main.py
