[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyNetSchoolApi"
version = "0.1.3"
dependencies = []
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
  {name = "Arkastar12", email = "arkastar123@gmail.com"},
]

[project.urls]
"Homepage" = "https://github.com/Arkastar12/PyNetSchoolApi"
